Thu Jul  1 10:44:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
          Replaced incorrect error messages.

Thu Jul  1 10:32:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/Parsing/run_test.pl:
          Print a message when a test succeeded

        * DAnCE/tests/Parsing/test.cpp:
          Explicitly catch Config_Error, that exception is now passed through
          to this test. Also initialize the DAnCE Logger so that we can get
          more output during manual testing

Thu Jul  1 09:02:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.mpc:
          Resolved linker errors on windows when full_ccm is on

Thu Jul  1 08:57:21 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        Add AMI4CCM tutorial to list.

Thu Jul  1 08:37:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO.mwc:
          Added tutorials directory

Thu Jul  1 07:01:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Deployment/descriptors/Plan.cdp:
          Slower rate.

Wed Jun 30 21:38:41 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Interceptors/Best_Effort.cpp:
        * DAnCE/LocalityManager/Interceptors/Standard_Error.cpp:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:

          Better detection of bad any values passed in.

        * DAnCE/LocalityManager/Scheduler/Events/Action_Base.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Endpoint.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Install.cpp:
        * DAnCE/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp: